<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
	        android:id="@+id/buttonAddFood"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add_food"
	        android:layout_weight=".5" />
        
        <Button
	        android:id="@+id/buttonAddClient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add_client"
	        android:layout_weight=".5"  />
    </LinearLayout>
    
	
     <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
	        android:id="@+id/buttonPrevClient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/prev_client" 
	        android:layout_alignParentLeft="true" />
        
        <Button
	        android:id="@+id/buttonNextClient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/next_client"
	        android:layout_toRightOf="@id/buttonPrevClient" />
        
        <Button
	        android:id="@+id/buttonClientPay"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/client_pay"
	        android:layout_alignParentRight="true" />
    </RelativeLayout>
	
	
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView android:id="@+id/clientId"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:textStyle="bold" >
		</TextView>
		
        <TextView android:id="@+id/priceToPay"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:textStyle="bold" >
		</TextView>
		
        <TextView android:id="@+id/timeToServe"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:textStyle="bold" >
		</TextView>
		
        <ListView
	        android:id="@+id/orderedFoodList"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    </ListView>
	 </LinearLayout>

</LinearLayout>